Fixed Layout issues for mobilde

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html,
 body {
   margin: 0;
-  height: 100%;
+  height: 100dvh;
   box-sizing: border-box;
   overflow-x: hidden;
 }
